chore: remove l10n by locales

--- a/packages/admin/src/locales/en.yml
+++ b/packages/admin/src/locales/en.yml
@@ -1,8 +1,6 @@
-test:
-  a: "I am A"
-
 ManagerWorkbench: "Manager Workbench"
 Welcome: "Welcome"
+ColorPicker: "ColorPicker"
 Theme: "Theme"
 WelcomePage: "Welcome age"
 BasicTable: "Basic Table"
@@ -18,13 +16,18 @@ MarkdownDocs: "Markdown Docs"
 Demo1: "Demo1"
 Demo2: "Demo2"
 Components: "OMIU Components"
+Input: "Input"
 Loading: "Loading"
 Toast: "Toast"
+Tree: "Tree"
 ToggleIcon: "ToggleIcon"
 Card: "Card"
+Checkbox: "Checkbox"
+Radio: "Radio"
 Slider: "Slider"
 Switch: "Switch"
 Progress: "Progress"
+Pagination: "Pagination"
 InlineEditing: "Inline Editing Table"
 MarkdownEditor: "Markdown Editor"
 Dashboard: "Dashboard"
