--- a/packages/admin/src/locales/zh.yml
+++ b/packages/admin/src/locales/zh.yml
@@ -1,9 +1,7 @@
-test:
-  a: "我是A"
-
 ManagerWorkbench: "管理者工作台"
 Welcome: "欢迎"
 Theme: "主题"
+ColorPicker: "ColorPicker 颜色选择器"
 WelcomePage: "欢迎界面"
 BasicTable: "基础表格"
 TableDeleteAnimation: "表格删除动画"
@@ -18,13 +16,18 @@ MarkdownDocs: "Markdown 文档"
 Demo1: "文档例子1"
 Demo2: "文档例子2"
 Components: "OMIU 组件"
+Input: "Input 输入框"
 Loading: "Loading 加载中"
 Toast: "Toast 弹出式提示"
+Tree: "Tree 树形控件"
 ToggleIcon: "ToggleIcon 可切换图标"
 Card: "Card 卡片"
+Checkbox: "Checkbox 复选框"
+Radio: "Radio 单选框"
 Slider: "Slider 滑块"
 Switch: "Switch 开关按钮"
 Progress: "Progress 进度条"
+Pagination: "Pagination 分页"
 InlineEditing: "表格行内编辑"
 MarkdownEditor: "Markdown 编辑器"
 Dashboard: "仪表盘"
